--- a/packages/workglow/package.json
+++ b/packages/workglow/package.json
@@ -5,15 +5,15 @@
   "description": "Workglow meta-package: re-exports all @workglow/* packages for convenient single-import usage.",
   "scripts": {
     "watch": "concurrently -c 'auto' 'bun:watch-*'",
-    "watch-browser": "bun build --watch --no-clear-screen --target=browser --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/browser.ts ./src/anthropic.browser.ts ./src/google-gemini.browser.ts ./src/hf-transformers.browser.ts ./src/ollama.browser.ts ./src/openai.browser.ts ./src/tf-mediapipe.ts",
-    "watch-node": "bun build --watch --no-clear-screen --target=node --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/node.ts ./src/anthropic.ts ./src/google-gemini.ts ./src/hf-transformers.ts ./src/ollama.ts ./src/openai.ts",
-    "watch-bun": "bun build --watch --no-clear-screen --target=bun --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/bun.ts ./src/anthropic.bun.ts ./src/google-gemini.bun.ts ./src/hf-transformers.bun.ts ./src/ollama.bun.ts ./src/openai.bun.ts",
+    "watch-browser": "bun build --splitting --watch --no-clear-screen --target=browser --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/browser.ts ./src/anthropic.browser.ts ./src/google-gemini.browser.ts ./src/hf-transformers.browser.ts ./src/ollama.browser.ts ./src/openai.browser.ts ./src/tf-mediapipe.ts",
+    "watch-node": "bun build --splitting --watch --no-clear-screen --target=node --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/node.ts ./src/anthropic.ts ./src/google-gemini.ts ./src/hf-transformers.ts ./src/ollama.ts ./src/openai.ts",
+    "watch-bun": "bun build --splitting --watch --no-clear-screen --target=bun --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/bun.ts ./src/anthropic.bun.ts ./src/google-gemini.bun.ts ./src/hf-transformers.bun.ts ./src/ollama.bun.ts ./src/openai.bun.ts",
     "watch-types": "tsc --watch --preserveWatchOutput",
     "build-package": "bun run build-clean && concurrently -c 'auto' -n 'browser,node,bun,types' 'bun run build-browser' 'bun run build-node' 'bun run build-bun' 'bun run build-types'",
     "build-clean": "rm -fr dist/*",
-    "build-browser": "bun build --target=browser --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/browser.ts ./src/anthropic.browser.ts ./src/google-gemini.browser.ts ./src/hf-transformers.browser.ts ./src/ollama.browser.ts ./src/openai.browser.ts ./src/tf-mediapipe.ts",
-    "build-node": "bun build --target=node --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/node.ts ./src/anthropic.ts ./src/google-gemini.ts ./src/hf-transformers.ts ./src/ollama.ts ./src/openai.ts",
-    "build-bun": "bun build --target=bun --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/bun.ts ./src/anthropic.bun.ts ./src/google-gemini.bun.ts ./src/hf-transformers.bun.ts ./src/ollama.bun.ts ./src/openai.bun.ts",
+    "build-browser": "bun build --splitting --target=browser --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/browser.ts ./src/anthropic.browser.ts ./src/google-gemini.browser.ts ./src/hf-transformers.browser.ts ./src/ollama.browser.ts ./src/openai.browser.ts ./src/tf-mediapipe.ts",
+    "build-node": "bun build --splitting --target=node --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/node.ts ./src/anthropic.ts ./src/google-gemini.ts ./src/hf-transformers.ts ./src/ollama.ts ./src/openai.ts",
+    "build-bun": "bun build --splitting --target=bun --sourcemap=external --packages=external --root ./src --outdir ./dist ./src/bun.ts ./src/anthropic.bun.ts ./src/google-gemini.bun.ts ./src/hf-transformers.bun.ts ./src/ollama.bun.ts ./src/openai.bun.ts",
     "build-types": "rm -f tsconfig.tsbuildinfo && tsc",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "bun test",
