--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "ollama": "^0.6.3",
     "openai": "^6.22.0",
     "@modelcontextprotocol/sdk": "^1.26.0",
-    "pg": "^8.18.0"
+    "pg": "^8.18.0",
+    "@supabase/supabase-js": "^2.97.0"
   },
   "devDependencies": {
     "@sroussey/changesets-cli": "^2.29.7",
