--- a/packages/workglow/package.json
+++ b/packages/workglow/package.json
@@ -93,9 +93,9 @@
     "@google/generative-ai": "catalog:",
     "ollama": "catalog:",
     "node-llama-cpp": "catalog:",
-    "@sqlite.org/sqlite-wasm": "^3.51.2-build6",
-    "better-sqlite3": "^12.6.2",
-    "pg": "^8.18.0",
+    "@sqlite.org/sqlite-wasm": "catalog:",
+    "better-sqlite3": "catalog:",
+    "pg": "catalog:",
     "@supabase/supabase-js": "catalog:"
   },
   "peerDependenciesMeta": {
