[chore] Add @huggingface/inference to build scripts and update bun.lock

--- a/examples/cli/package.json
+++ b/examples/cli/package.json
@@ -11,8 +11,8 @@
     "build-example": "bun run build-clean && concurrently -c 'auto' -n 'js,js-worker,js-worker-hft,lib, types' 'bun run build-js' 'bun run build-js-worker' 'bun run build-js-worker-hft' 'bun run build-lib' 'bun run build-types'",
     "build-clean": "rm -fr dist/* tsconfig.tsbuildinfo",
     "build-js": "bun build --target=bun --packages=external --outdir ./dist ./src/workglow.ts",
-    "build-js-worker": "bun build --target=node --outdir ./dist ./src/workglow_worker.ts",
-    "build-js-worker-hft": "bun build --target=node --outdir ./dist ./src/worker_hft.ts",
+    "build-js-worker": "bun build --target=node --packages=external --outdir ./dist ./src/workglow_worker.ts",
+    "build-js-worker-hft": "bun build --target=node --packages=external --outdir ./dist ./src/worker_hft.ts",
     "build-lib": "bun build --target=bun --packages=external --outdir ./dist ./src/lib.ts",
     "build-types": "rm -f tsconfig.tsbuildinfo && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
