[feat] Introduce CountTokensTask for accurate token counting in AI workflows
- Added CountTokensTask to count tokens in a text string using specified model tokenizers.
- Enhanced ContextBuilderTask to support maxTokens input for better token management.
- Updated HierarchicalChunkerTask to utilize CountTokensTask for precise token budgeting.
- Integrated tiktoken for OpenAI provider to facilitate local token counting.
- Updated package.json and bun.lock to include tiktoken as a dependency.
- Enhanced documentation and tests to cover new functionality.

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@huggingface/inference": "^4.13.12",
     "ollama": "^0.6.3",
     "openai": "^6.22.0",
+    "tiktoken": "^1.0.22",
     "@modelcontextprotocol/sdk": "^1.26.0",
     "pg": "^8.18.0",
     "@supabase/supabase-js": "^2.97.0",
