--- a/examples/cli/package.json
+++ b/examples/cli/package.json
@@ -42,6 +42,13 @@
     "@mediapipe/tasks-audio": "catalog:",
     "@mediapipe/tasks-genai": "catalog:",
     "@sroussey/transformers": "catalog:",
+    "tiktoken": "catalog:",
+    "openai": "catalog:",
+    "ollama": "catalog:",
+    "node-llama-cpp": "catalog:",
+    "@huggingface/inference": "catalog:",
+    "@anthropic-ai/sdk": "catalog:",
+    "@google/generative-ai": "catalog:",
     "@types/react": "^19.2.14",
     "chalk": "^5.6.2",
     "commander": "^14.0.3",
