--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "caniuse-lite": "^1.0.30001770"
   },
   "catalog": {
-    "@sroussey/transformers": "3.8.2",
+    "@sroussey/transformers": "4.0.0-next.7",
     "@mediapipe/tasks-text": "^0.10.32",
     "@mediapipe/tasks-vision": "^0.10.32",
     "@mediapipe/tasks-audio": "^0.10.32",
