[feat] Introduce browser automation tasks and cleanup registry
- Added new browser automation tasks: BrowserNavigateTask, BrowserClickTask, BrowserExtractTask, BrowserEvaluateTask, BrowserTransformTask, BrowserWaitTask, BrowserCloseTask.
- Implemented RunCleanupRegistry for managing cleanup tasks after graph execution.
- Updated TaskGraphRunner to utilize the RunCleanupRegistry for resource management.
- Enhanced documentation to include new browser automation capabilities and usage examples.

Plan: DAG-Style Playwright Browser Nodes with Shared Context
Summary
Build Node/Bun-only Playwright task nodes for DAG workflows using @workglow/tasks, with explicit context passing (context object) and runtime session indirection (session_id) so dataflow remains serializable.
Required nodes: Navigate, Extract, Click, Wait, Evaluate, Transform.
Add Close as a lifecycle node, plus automatic run-end cleanup safety.

Public API Changes
New task classes in @workglow/tasks (Node/Bun entrypoints):
BrowserNavigateTask
BrowserExtractTask
BrowserClickTask
BrowserWaitTask
BrowserEvaluateTask
BrowserTransformTask
BrowserCloseTask (lifecycle support)
New workflow helpers (namespaced to avoid collisions):
workflow.browserNavigate(...)
workflow.browserExtract(...)
workflow.browserClick(...)
workflow.browserWait(...)
workflow.browserEvaluate(...)
workflow.browserTransform(...)
workflow.browserClose(...)
Shared context contract (all browser tasks):
Input contains optional context: Record<string, unknown> and optional session_id: string
Output always returns context
Reserved metadata path: context.__browser = { session_id: string, url?: string, title?: string }
Raw Playwright handles never enter task input/output dataflow
Core runtime cleanup API in @workglow/task-graph:
Add a generic run-scoped cleanup registry token/interface in task-graph
TaskGraph runner executes registered cleanup handlers on complete, error, abort, disable
Browser tasks register session close handlers through this generi

--- a/packages/tasks/package.json
+++ b/packages/tasks/package.json
@@ -39,7 +39,8 @@
     "@workglow/task-graph": "workspace:*",
     "@workglow/util": "workspace:*",
     "@workglow/job-queue": "workspace:*",
-    "@workglow/storage": "workspace:*"
+    "@workglow/storage": "workspace:*",
+    "playwright": "^1.50.0"
   },
   "peerDependenciesMeta": {
     "@workglow/task-graph": {
@@ -53,6 +54,9 @@
     },
     "@workglow/storage": {
       "optional": false
+    },
+    "playwright": {
+      "optional": true
     }
   },
   "devDependencies": {
